<resources>
    <string name="app_name">CipeR</string>
    <string name="login">Log In</string>
    <string name="logout">Log out</string>
    <string name="logo_description">logo text</string>
    <string name="offert_under_text">Offerte</string>
    <string name="product_image">Product image</string>
    <string name="titolo_carrello">Titolo carrello</string>
    <string name="start_button">Start</string>
    <string name="mod_button">Modifica</string>
    <string name="static_text_oggetti">Oggetti</string>
    <string name="static_text_aggiungi_al_carrello">Aggiungi a questo negozio</string>
    <string name="static_text_i_tuoi_carrelli">I tuoi carrelli</string>
    <string name="static_text_dove_conviene">Dove conviene qui vicino</string>
    <string name="crea_button">Crea</string>
    <string name="aggiungi_button">Aggiungi</string>
    <string name="rename_button">Rinomina</string>
    <string name="delete_button">Elimina</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>