<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/offertItem"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@drawable/shape_carello">


    <TextView
        android:id="@+id/titoloCarrello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/titolo_carrello"
        android:fontFamily="@font/notosans_bold"
        android:text="NOME DEL CARRELLO"
        android:textAllCaps="true"
        android:textColor="@color/ciperDarkPurpleSimil"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shopIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Button
        android:id="@+id/startShopButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_button"
        android:backgroundTint="@color/ciperDarkPurpleSimil"
        android:text="@string/start_button"
        android:textSize="10sp"
        app:icon="@drawable/ic_shopping_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/numeroOggetti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/notosans_bold"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shopIcon"
        app:layout_constraintTop_toBottomOf="@+id/titoloCarrello" />

    <TextView
        android:id="@+id/staticTextOggetti"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/static_text_oggetti"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numeroOggetti"
        app:layout_constraintTop_toBottomOf="@+id/titoloCarrello"
        app:layout_constraintVertical_bias="0.59000003" />

</androidx.constraintlayout.widget.ConstraintLayout>

