<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/offertItem"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/shape_carello">


    <TextView
        android:id="@+id/shopNameProductSheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/titolo_carrello"
        android:fontFamily="@font/opensans_bolditalic"
        android:text="nome del negozio"
        android:textColor="@color/ciperDarkPurpleSimil"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numeroOggetti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shopIconProductSheet"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/numeroOggetti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/notosans_bold"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/staticTextOggetti"
        app:layout_constraintEnd_toStartOf="@+id/staticTextOggetti"
        app:layout_constraintTop_toTopOf="@+id/staticTextOggetti"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:id="@+id/staticTextOggetti"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/static_text_oggetti"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shopIconProductSheet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71000004" />

</androidx.constraintlayout.widget.ConstraintLayout>

