<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupAddProd"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_add_prod_background">

    <TextView
        android:id="@+id/staticTextRicerca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_bolditalic"
        android:text="@string/static_text_aggiungi_al_carrello"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/numberPikerAddToCart"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticTextRicerca" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/productImageAddProd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/product_image"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintBottom_toBottomOf="@+id/numberPikerAddToCart"
        app:layout_constraintEnd_toStartOf="@+id/numberPikerAddToCart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberPikerAddToCart"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Button
        android:id="@+id/addProductPopupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:fontFamily="@font/opensans_bolditalic"
        android:text="@string/aggiungi_button"
        app:layout_constraintBottom_toBottomOf="@+id/numberPikerAddToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberPikerAddToCart"
        app:layout_constraintTop_toTopOf="@+id/numberPikerAddToCart" />


</androidx.constraintlayout.widget.ConstraintLayout>